updated navbar, hero, and main css to fix alignment and colors to match basic layout structure of figma design.

--- a/battle-warriors-quests/src/css/main.css
+++ b/battle-warriors-quests/src/css/main.css
@@ -2,42 +2,55 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    }
-    
-    .wrapper {
-    background-color: #191B24;
-    padding: 20px;
-    }
-    
-    h1, pattern {
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #674A38;
+    padding: 0.5rem 1rem;
+}
+
+.site-title {
+    font-size: 2.5rem;
     color: #FDE7D5;
-    }
+}
 
-    .nav-header {
-        background-color: #674A38;
-    }
+.navbar-links, a {
+    color: #FDE7D5;
+    text-decoration: none;
+    margin-left: 2rem;
+    font-size: 1.5rem;
+}
 
-    .wrapper {
-        height: 400px;
-    }
+.main {
+    background-color: #191B24;
+    color: #FDE7D5;
+    padding: 1rem;
+    min-height: 100vh;
 
-    .gateway-container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: calc(100% - 60px);
-    }
+}
 
-    .main-img {
-        position: absolute;
-        object-fit: cover;
-    }
+.container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: calc(100vh - 60px);
+    margin-top: -80px;
+}
 
-    .cta-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        z-index: 10;
-    }
+.main-img {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    z-index: 10;
+}
